--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -25,9 +25,9 @@
 
                         <div>
                             {{#if company.url}}
-                                {{> link text=company.name href=company.url blank=true noLine=true }}
+                            {{> link text=company.name href=company.url blank=true noLine=true }}
                             {{else}}
-                                <b>{{company.name}}</b>
+                            <b>{{company.name}}</b>
                             {{/if}}
                         </div>
 
@@ -62,17 +62,17 @@
                                 <div>
                                     <ul>
                                         {{#each stacks}}
-                                            <li>
-                                                {{name}}
-                                            </li>
+                                        <li>
+                                            {{name}}
+                                        </li>
                                         {{/each}}
                                     </ul>
                                 </div>
 
                                 <br>
-                                
+
                                 <div>
-                                    <em>Project awards</em>
+                                    <em>Project awards ({{awardAmount}})</em>
                                 </div>
 
                                 <br>
@@ -80,9 +80,9 @@
                                 <div>
                                     <ul>
                                         {{#each awards}}
-                                            <li>
-                                                {{name}}
-                                            </li>
+                                        <li>
+                                            {{name}}
+                                        </li>
                                         {{/each}}
                                     </ul>
                                 </div>
