--- a/src/layout/big.hbs
+++ b/src/layout/big.hbs
@@ -3,6 +3,7 @@
 І котрий обгортає код container файлів для будь-яких ендпоїнтів
 }}
 
+
 <html>
 
 <head>
@@ -26,7 +27,8 @@
 	<br />
 	<hr />
 
-	{{> footer social=footer.social address=header.address firstname=header.name.firstname lastname=header.name.lastname}}
+	{{> footer social=footer.social address=header.address firstname=header.name.firstname
+	lastname=header.name.lastname}}
 
 </body>
 
