end task shopcart

--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -19,7 +19,7 @@
 <body>
 
 	{{> shopnav}}
-	{{> shopheader}}
+	{{!-- {{> shopheader}} --}}
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
 	{{{body}}}
