--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -1,3 +1,8 @@
+<header class="my-0">
+    <section>
+        <h1>{{header}}</h1>
+    </section>
+</header>
 <main>
     <section>
         <div class="row mx-0">
