end task shopcatalog

--- a/src/component/shopButtons.hbs
+++ b/src/component/shopButtons.hbs
@@ -1,8 +1,8 @@
 <a href="{{link}}" {{#if blank}} target='_blank' {{/if}}
-    class="my-1 me-2 btn {{#if isPrimary}}btn-primary{{/if}}{{#if isSecondary}}btn-secondary{{/if}}{{#if isSuccess}}btn-success{{/if}}{{#if isDanger}}btn-danger{{/if}}{{#if isWarning}}btn-warning{{/if}}{{#if isInfo}}btn-info{{/if}}{{#if isLight}}btn-light{{/if}}{{#if isDark}}btn-dark{{/if}}{{#if isLink}}btn-link{{/if}}">{{text}}</a>
+    class="my-1 me-2 btn {{#if isPrimary}}btn-primary{{/if}}{{#if isSecondary}}btn-secondary{{/if}}{{#if isSuccess}}btn-success{{/if}}{{#if isDanger}}btn-danger{{/if}}{{#if isWarning}}btn-warning{{/if}}{{#if isInfo}}btn-info{{/if}}{{#if isLight}}btn-light{{/if}}{{#if isDark}}btn-dark{{/if}}{{#if isLink}}btn-link{{/if}}{{#if isOutlineSecondary}}btn-outline-secondary{{/if}}">{{text}}</a>
 
 {{!-- {{#if isOutline}}btn-outline-primary --}}
-{{!-- {{#if is}}btn-outline-secondary --}}
+
 {{!-- {{#if is}}btn-outline-success --}}
 {{!-- {{#if is}}btn-outline-danger --}}
 {{!-- {{#if is}}btn-outline-warning --}}
