--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -77,8 +77,9 @@
     {{/with}}
 
 
-    {{#with service}}
     <section>
+        {{> shopService}}
+        {{!-- {{#with service}}
         <div class='card text-bg-success text-center'>
             <div class='card-body p-2'>
                 <div class='card-title'>
@@ -91,7 +92,7 @@
                 {{/each}}
             </div>
         </div>
+        {{/with}} --}}
         <hr class='mx-0 mt-5 mb-2' />
     </section>
-    {{/with}}
 </main>
