--- a/src/container/shopreview.hbs
+++ b/src/container/shopreview.hbs
@@ -83,7 +83,8 @@
         {{> reviewItem}}
         {{/each}}
 
-        {{#with service}}
+        {{> shopService}}
+        {{!-- {{#with service}}
         <div class='card text-bg-success text-center'>
             <div class='card-body p-2'>
                 <div class='card-title'>
@@ -96,7 +97,7 @@
                 {{/each}}
             </div>
         </div>
-        {{/with}}
+        {{/with}} --}}
 
     </section>
     <hr class="mx-3 mt-5 mb-0">
