--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -2,13 +2,22 @@
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
-
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
-
-    <button type="button" class="btn btn-primary">Купити</button>
-
-</div>
+<main>
+    <div class="px-0 py-3">
+        <h4>Cписок сторінок</h4>
+        <p>Тут вам потрібно написати інформацію про ваш проєкт.<br>
+            Поки що можна написати будь-який текст
+        </p>
+    </div>
+    <div class="p-0">
+        {{#each buttons}}
+        <p class="m-0 p-0">
+            {{!-- {{@key}} --}}
+            {{>shopButtons}}
+        </p>
+        {{/each}}
+    </div>
+</main>
 
 {{!--
 Цей код містить лише те, що буде виводитись в
